--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
 spring.application.name=dady
+
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/dady_db?useSSL=false&serverTimezone=UTC
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=
+
+# JPA Configuration
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Thymeleaf Configuration
+spring.thymeleaf.cache=false
+
+# Spring Session Configuration
+spring.session.store-type=jdbc
+spring.session.jdbc.initialize-schema=always
